try env context

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,16 +3,16 @@ name: build and test
 on: push
 
 env:
-  CRDS_PATH: $HOME/crds_cache
+  CRDS_PATH: ${{ env.HOME }}/crds_cache
   CRDS_SERVER_URL: https://hst-crds.stsci.edu
   CRDS_READONLY_CACHE: 0
-  iref: ${CRDS_PATH}/references/hst/wfc3/
-  jref: ${CRDS_PATH}/references/hst/acs/
-  oref: ${CRDS_PATH}/references/hst/stis/
-  lref: ${CRDS_PATH}/references/hst/cos/
-  nref: ${CRDS_PATH}/references/hst/nicmos/
-  uref: ${CRDS_PATH}/references/hst/wfcpc2/
-  uref_linux: $uref
+  iref: ${{ env.CRDS_PATH }}/references/hst/wfc3/
+  jref: ${{ env.CRDS_PATH }}/references/hst/acs/
+  oref: ${{ env.CRDS_PATH }}/references/hst/stis/
+  lref: ${{ env.CRDS_PATH }}/references/hst/cos/
+  nref: ${{ env.CRDS_PATH }}/references/hst/nicmos/
+  uref: ${{ env.CRDS_PATH }}/references/hst/wfcpc2/
+  uref_linux: ${{ env.uref }}
   DOCKER_REPO: alphasentaurii/caldp
   DOCKER_TAG: latest
   CAL_BASE_IMAGE: stsci/hst-pipeline:latest
