--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,34 +3,32 @@ name: build and test
 on: push
 
 jobs:
-  build:
-    name: build
-
+  stable:
+    name: pytest native functional tests STABLE
     runs-on: ubuntu-18.04
-    strategy:
-      matrix:
-        python-version: [3.6.10]
+
+    env:
+      HSTCAL: stable
+      CAL_BASE_IMAGE: stsci/hst-pipeline:stable
+      CRDS_SERVER_URL: https://hst-crds.stsci.edu
+      CRDS_READONLY_CACHE: 0
+      CALDP_TEST_FILE_SIZE_THRESHOLD: 0.30
 
     steps:
+      - name: set up python 3.6.10
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.6.10
+
       - name: checkout code
         uses: actions/checkout@v2
 
-      - name: set up python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: set up the environment 1
+      - name: set up environment 1
         run: |
           echo "CRDS_PATH=$HOME/crds_cache" >> $GITHUB_ENV
-          echo "CRDS_SERVER_URL=https://hst-crds.stsci.edu" >> $GITHUB_ENV
-          echo "CRDS_READONLY_CACHE=0" >> $GITHUB_ENV
-          echo "DOCKER_REPO=alphasentaurii/caldp" >> $GITHUB_ENV
-          echo "DOCKER_TAG=latest" >> $GITHUB_ENV
-          echo "CAL_BASE_IMAGE=stsci/hst-pipeline:latest" >> $GITHUB_ENV
-          echo "CALDP_TEST_FILE_SIZE_THRESHOLD=0.30" >> $GITHUB_ENV
+          echo "LD_LIBRARY_PATH=$HOME/miniconda3/envs/caldp_stable/lib" >> $GITHUB_ENV
 
-      - name: set up the environment 2
+      - name: set up environment 2
         run: |
           echo "iref=$CRDS_PATH/references/hst/wfc3/" >> $GITHUB_ENV
           echo "jref=$CRDS_PATH/references/hst/acs/" >> $GITHUB_ENV
@@ -39,10 +37,34 @@ jobs:
           echo "nref=$CRDS_PATH/references/hst/nicmos/" >> $GITHUB_ENV
           echo "uref=$CRDS_PATH/references/hst/wfcpc2/" >> $GITHUB_ENV
 
-      - name: set up the environment 3
+      - name: set up environment 3
         run: |
           echo "uref_linux=$uref" >> $GITHUB_ENV
 
-      - name: print environment
+      - name: install
+        run: scripts/caldp-install-all stable
+
+      - name: run pytest
         run: |
-          env
+          source "$HOME/miniconda3/etc/profile.d/conda.sh"
+          conda activate caldp_stable
+          pytest caldp --cov=caldp --cov-fail-under 77  --capture=tee-sys
+
+      - name: compute test coverage
+        run: bash <(curl -s https://codecov.io/bash)
+
+
+
+
+#    - name: Pytest native functional tests LATEST
+#      env:
+#        - HSTCAL=latest
+#        - LD_LIBRARY_PATH=$HOME/miniconda3/envs/caldp_${HSTCAL}/lib
+#      install:
+#        - scripts/caldp-install-all  ${HSTCAL}
+#      script:
+#        - source "$HOME/miniconda3/etc/profile.d/conda.sh"
+#        - conda activate caldp_${HSTCAL}
+#        - pytest caldp --cov=caldp  --cov-fail-under 77  --capture=tee-sys
+#      after_success:
+#        - bash <(curl -s https://codecov.io/bash)
