--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -3,35 +3,27 @@ name: code checks
 on: push
 
 jobs:
-  check:
+  checks:
     name: run checks
-
     runs-on: ubuntu-18.04
-    strategy:
-      matrix:
-        python-version: [3.6.10]
 
     steps:
+      - name: set up python 3.6.10
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.6.10
+
+      - name: install dependencies
+        run: pip install bandit black flake8
+
       - name: checkout code
         uses: actions/checkout@v2
 
-      - name: set up python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: install dependencies
-        run: |
-          pip install bandit black flake8
-
       - name: run bandit security checks
-        run: |
-          bandit -ll -r caldp
+        run: bandit -ll -r caldp
 
       - name: run black style checks
-        run: |
-          black --check caldp caldp/tests
+        run: black --check caldp caldp/tests
 
       - name: run flake8 python lint checks
-        run: |
-          flake8 --count --max-line-length=120 --exclude docs
+        run: flake8 --count --max-line-length=120 --exclude docs
