--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,12 +4,11 @@ on: push
 
 jobs:
   stable:
-    name: pytest native functional tests STABLE
+    name: STABLE pytest native functional tests
     runs-on: ubuntu-18.04
 
     env:
       HSTCAL: stable
-      CAL_BASE_IMAGE: stsci/hst-pipeline:stable
       CRDS_SERVER_URL: https://hst-crds.stsci.edu
       CRDS_READONLY_CACHE: 0
       CALDP_TEST_FILE_SIZE_THRESHOLD: 0.30
@@ -29,20 +28,10 @@ jobs:
       - name: set up environment 1
         run: |
           echo "CRDS_PATH=$HOME/crds_cache" >> $GITHUB_ENV
-          echo "LD_LIBRARY_PATH=$HOME/miniconda3/envs/caldp_stable/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
+          echo "LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$HOME/miniconda3/envs/caldp_stable/lib" >> $GITHUB_ENV
 
       - name: set up environment 2
-        run: |
-          echo "iref=$CRDS_PATH/references/hst/wfc3/" >> $GITHUB_ENV
-          echo "jref=$CRDS_PATH/references/hst/acs/" >> $GITHUB_ENV
-          echo "oref=$CRDS_PATH/references/hst/stis/" >> $GITHUB_ENV
-          echo "lref=$CRDS_PATH/references/hst/cos/" >> $GITHUB_ENV
-          echo "nref=$CRDS_PATH/references/hst/nicmos/" >> $GITHUB_ENV
-          echo "uref=$CRDS_PATH/references/hst/wfcpc2/" >> $GITHUB_ENV
-
-      - name: set up environment 3
-        run: |
-          echo "uref_linux=$uref" >> $GITHUB_ENV
+        run: source scripts/caldp-cal-env
 
       - name: install
         run: scripts/caldp-install-all stable
@@ -56,21 +45,58 @@ jobs:
       - name: compute test coverage
         run: bash <(curl -s https://codecov.io/bash)
 
+  latest:
+    name: LATEST pytest native functional tests
+    runs-on: ubuntu-18.04
 
-#
-#
-# fix code coverage!
-#
-#    - name: Pytest native functional tests LATEST
-#      env:
-#        - HSTCAL=latest
-#        - LD_LIBRARY_PATH=$HOME/miniconda3/envs/caldp_${HSTCAL}/lib
-#      install:
-#        - scripts/caldp-install-all  ${HSTCAL}
-#      script:
-#        - source "$HOME/miniconda3/etc/profile.d/conda.sh"
-#        - conda activate caldp_${HSTCAL}
-#        - pytest caldp --cov=caldp  --cov-fail-under 77  --capture=tee-sys
-#      after_success:
-#        - bash <(curl -s https://codecov.io/bash)
-#
+    env:
+      HSTCAL: latest
+      CRDS_SERVER_URL: https://hst-crds.stsci.edu
+      CRDS_READONLY_CACHE: 0
+      CALDP_TEST_FILE_SIZE_THRESHOLD: 0.30
+
+    steps:
+      - name: set up python 3.6.10
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.6.10
+
+      - name: install dependencies
+        run: pip install coverage
+
+      - name: checkout code
+        uses: actions/checkout@v2
+
+      - name: set up environment 1
+        run: |
+          echo "CRDS_PATH=$HOME/crds_cache" >> $GITHUB_ENV
+          echo "LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$HOME/miniconda3/envs/caldp_latest/lib" >> $GITHUB_ENV
+
+      - name: set up environment 2
+        run: source scripts/caldp-cal-env
+
+      - name: install
+        run: scripts/caldp-install-all latest
+
+      - name: run pytest
+        run: |
+          source "$HOME/miniconda3/etc/profile.d/conda.sh"
+          conda activate caldp_latest
+          pytest caldp --cov=caldp --cov-fail-under 77  --capture=tee-sys
+
+      - name: compute test coverage
+        run: bash <(curl -s https://codecov.io/bash)
+
+
+#      CAL_BASE_IMAGE: stsci/hst-pipeline:latest
+#        - DOCKER_REPO=alphasentaurii/caldp
+#        - DOCKER_TAG=latest
+ #   - name: Docker image build and single dataset
+  ##   before_install:
+        # - docker pull $DOCKER_REPO:$DOCKER_TAG
+    #    - docker build -f Dockerfile  -t ${DOCKER_REPO}:${DOCKER_TAG}  --build-arg CAL_BASE_IMAGE=${CAL_BASE_IMAGE}  .
+     # script:
+      #  - "docker run ${DOCKER_REPO}:${DOCKER_TAG}  caldp-process  j8cb010b0  astroquery:  none  caldp-config-offsite"
+   #   after_success:
+    #    - echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
+     #   - docker push ${DOCKER_REPO}:${DOCKER_TAG}
