--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,10 @@ jobs:
     name: docker image build and single dataset
     runs-on: ubuntu-18.04
 
+    strategy:
+      matrix:
+        HSTCAL: [stable, latest]
+
     steps:
       - name: checkout code
         uses: actions/checkout@v2
