split checks into separate jobs; added docker run

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,5 +25,6 @@ jobs:
           repository: ${{ env.DOCKER_REPO }}
           tags: ${{ env.DOCKER_TAG }}
           build_args: CAL_BASE_IMAGE=${{ env.CAL_BASE_IMAGE }}
-# docker build -f Dockerfile  -t ${DOCKER_REPO}:${DOCKER_TAG}  --build-arg   .
-# docker run ${DOCKER_REPO}:${DOCKER_TAG}  caldp-process  j8cb010b0  astroquery:  none  caldp-config-offsite
+
+      - name: run sample container
+        run: 'docker run $DOCKER_REPO:$DOCKER_TAG caldp-process j8cb010b0 astroquery: none caldp-config-offsite'
